--- a/server/pom.xml
+++ b/server/pom.xml
@@ -96,22 +96,22 @@
 			<version>2.0.1</version>
 		</dependency>
         <!-- 解压(apache) -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.19</version>
-        </dependency>
+       <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>1.21</version>
+       </dependency>
         <!-- 解压(rar)-->
         <dependency>
-            <groupId>com.github.junrar</groupId>
-            <artifactId>junrar</artifactId>
-            <version>4.0.0</version>
-        </dependency>
+       <groupId>com.github.junrar</groupId>
+       <artifactId>junrar</artifactId>
+       <version>7.4.0</version>
+       </dependency>
         <!-- 解压(7z)-->
         <dependency>
             <groupId>org.tukaani</groupId>
             <artifactId>xz</artifactId>
-            <version>1.8</version>
+            <version>1.9</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.jchardet</groupId>
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
-            <version>3.6</version>
+            <version>3.8.0</version>
         </dependency>
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
@@ -161,17 +161,19 @@
             <artifactId>rocksdbjni</artifactId>
             <version>5.17.2</version>
         </dependency>
+		 <!-- pdf转换图片 -->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>2.0.24</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox-tools</artifactId>
-            <version>2.0.15</version>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox-tools</artifactId>
+      <version>2.0.24</version>
         </dependency>
-        <dependency>
+		 <!-- CAD转换 -->
+         <dependency>
             <groupId>com.aspose</groupId>
             <artifactId>aspose-cad</artifactId>
             <version>21.8</version>
