--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -35,7 +35,14 @@ url.base64 = true
 #POI转换PPT图片清晰度 只能是整数
 PPTXTP = 2
 #pdf转换图片清晰度
-pdfjpg = 144
+pdfjpg = 100
+
+#启用PDF分页功能 true false
+pdffy = true
+
+#pdf限制显示多少页  0是全部 参数(1-4) 
+pdfpage = 1-2
+
 #缓存实现类型，不配默认为内嵌RocksDB(type = default)实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
 cache.type =  ${KK_CACHE_TYPE:jdk}
 #redis连接，只有当cache.type = redis时才有用
