增加对OFFICE原文件删除或保留功能 修复4.12的一处BUG

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -28,7 +28,7 @@ file.dir = ${KK_FILE_DIR:default}
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
 office.home = ${KK_OFFICE_HOME:default}
-#启用转换内核openoffice 或 LibreOffice =1 启用转换内核 poi=2  
+#启用转换内核 openoffice 或 LibreOffice =1 启用转换内核 poi=2  
 office.officexh = 1
 #启用base64 
 url.base64 = true
@@ -37,11 +37,14 @@ PPTXTP = 2
 #pdf转换图片清晰度
 pdfjpg = 100
 
-#启用PDF分页功能 true false
-pdffy = true
+#启用PDF分页功能 true  false
+pdffy = false
 
 #pdf限制显示多少页  0是全部 参数(1-4) 
 pdfpage = 1-2
+
+#OFFICE文件是否保留源文件  true  false
+officedel = false
 
 #缓存实现类型，不配默认为内嵌RocksDB(type = default)实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
 cache.type =  ${KK_CACHE_TYPE:jdk}
