--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -46,6 +46,9 @@ pdfpage = 1-2
 #OFFICE文件是否保留源文件  true  false
 officedel = false
 
+#xlsx 直接输出不需要转换成HTML
+xlsxzh = true
+
 #缓存实现类型，不配默认为内嵌RocksDB(type = default)实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
 cache.type =  ${KK_CACHE_TYPE:jdk}
 #redis连接，只有当cache.type = redis时才有用
