2021年12月9日，v4.1.8版本发布: 1、修复压缩包 解压后PDF 图片问题 2、调整PDF 压缩包解压模式下载覆盖问题 3、集成了PDF压缩 功能在OfficeFilePreviewImpl 类里面 没启用 等待继续完善 4、如果没有发现问题下个版本就是高雄4.2版本了 属于正式版本了

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.keking</groupId>
     <artifactId>filepreview</artifactId>
-    <version>4.0.0</version>
+    <version>4.1.8</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -23,7 +23,7 @@
         <module>server</module>
     </modules>
 
-    <name>file-online-preview</name>
+    <name>kkFileView-parent</name>
     <description>专注文件在线预览服务</description>
     <url>https://github.com/kekingcn/kkFileView</url>
 
