--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -69,7 +69,7 @@ base.url = ${KK_BASE_URL:default}
 trust.host = ${KK_TRUST_HOST:default}
 
 #是否启用缓存
-cache.enabled = ${KK_CACHE_ENABLED:true}
+cache.enabled = ${KK_CACHE_ENABLED:false}
 
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
@@ -80,7 +80,7 @@ media = ${KK_MEDIA:mp3,wav,mp4,flv}
 media.convert.disable = ${KK_MEDIA_CONVERT_DISABLE:false}
 #支持转换的视频类型
 convertMedias = ${KK_CONVERTMEDIAS:avi,mov,wmv,mkv,3gp,rm}
-#office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
+#office类型文档(word ppt)样式，默认为图片(image)，可配置为 pdf（预览时也有按钮切换）
 office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 #是否关闭office预览切换开关，默认为false，可配置为true关闭
 office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
