--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
     <groupId>cn.keking</groupId>
     <artifactId>filepreview</artifactId>
-    <version>4.1.8</version>
+    <version>${kk.file.view.version}</version>
+    <packaging>pom</packaging>
+
+    <name>kkFileView-parent</name>
+    <description>专注文件在线预览服务</description>
+    <url>https://github.com/kekingcn/kkFileView</url>
+
+    <modules>
+        <module>office-plugin</module>
+        <module>server</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
+        <kk.file.view.version>4.1.8</kk.file.view.version>
         <spring.boot.version>2.4.2</spring.boot.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -17,15 +27,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     </properties>
-
-    <modules>
-        <module>office-plugin</module>
-        <module>server</module>
-    </modules>
-
-    <name>kkFileView-parent</name>
-    <description>专注文件在线预览服务</description>
-    <url>https://github.com/kekingcn/kkFileView</url>
 
     <licenses>
         <license>
