2021年12月9日，v4.1.9版本发布: 1、修复了特殊文件流不能转换的问题 2、文件头识别新增了一种格式

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -69,7 +69,7 @@ base.url = ${KK_BASE_URL:default}
 trust.host = ${KK_TRUST_HOST:default}
 
 #是否启用缓存
-cache.enabled = ${KK_CACHE_ENABLED:false}
+cache.enabled = ${KK_CACHE_ENABLED:true}
 
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
