2021年12月10日，v4.1.9.1版本发布: 1、新增N多格式 obj、3ds、stl、ply、off、3dm、fbx、dae、wrl、3mf、ifc、glb、o3dv 2、修改压缩包解压方法 //参考其他人的 3、新增POI和开源OFFICE切换模式&officePreviewType=poi  &officePreviewType=office 4、新增MHT格式 没有完善明天完善它

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -235,6 +235,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/cpdetector-1.04.jar</systemPath>
         </dependency>
+		
+		 <!-- 邮件转换 -->
+		<dependency>
+     <groupId>javax.mail</groupId>
+     <artifactId>mail</artifactId>
+     <version>1.4.7</version>
+    </dependency>
         <!-- url 规范化 -->
         <dependency>
             <groupId>io.mola.galimatias</groupId>
