2021年12月13日 1、新增对file协议 关闭或者开启 强烈建议不要启用 设计到安全问题 如果是局域网就没关系了

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -27,6 +27,11 @@ office.plugin.task.timeout = 5m
 #文件资源路径（默认为打包根路径下的file目录下）
 #file.dir = D:\\kkFileview\\
 file.dir = ${KK_FILE_DIR:default}
+
+#允许预览的本地文件夹 默认不允许任何本地文件被预览
+#file.dir = D:\\kkFileview\\
+local.preview.dir = true
+
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
 office.home = ${KK_OFFICE_HOME:default}
@@ -69,7 +74,7 @@ base.url = ${KK_BASE_URL:default}
 trust.host = ${KK_TRUST_HOST:default}
 
 #是否启用缓存
-cache.enabled = ${KK_CACHE_ENABLED:true}
+cache.enabled = ${KK_CACHE_ENABLED:false}
 
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
