--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -90,6 +90,9 @@ office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 #是否关闭office预览切换开关，默认为false，可配置为true关闭
 office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
 
+#限制右键
+pdf.xianzhi = true
+
 #是否禁止下载转换生成的pdf文件
 pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
 #是否禁用首页文件上传
