--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -90,7 +90,7 @@ office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 #是否关闭office预览切换开关，默认为false，可配置为true关闭
 office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
 
-#限制右键
+#限制右键 屏蔽F12 等功能 默认开启
 pdf.xianzhi = true
 
 #是否禁止下载转换生成的pdf文件
