--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.keking</groupId>
         <artifactId>filepreview</artifactId>
-        <version>${kk.file.view.version}</version>
+        <version>4.2.3</version>
     </parent>
 
     <artifactId>kkFileView</artifactId>
