--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -91,7 +91,7 @@ office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
 
 #限制右键 屏蔽F12 等功能 默认开启
-pdf.xianzhi = true
+pdf.xianzhi = false
 
 #是否禁止下载转换生成的pdf文件
 pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
