--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -28,9 +28,11 @@ office.plugin.task.timeout = 5m
 #file.dir = D:\\kkFileview\\
 file.dir = ${KK_FILE_DIR:default}
 
-#允许预览的本地文件夹 默认不允许任何本地文件被预览
-#file.dir = D:\\kkFileview\\
+#允许file协议预览的本地文件夹 默认不允许任何file协议
 local.preview.dir = true
+
+#是否运行访问首页  默认开启
+local.preview.index = true
 
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
@@ -74,7 +76,7 @@ base.url = ${KK_BASE_URL:default}
 trust.host = ${KK_TRUST_HOST:default}
 
 #是否启用缓存
-cache.enabled = ${KK_CACHE_ENABLED:false}
+cache.enabled = ${KK_CACHE_ENABLED:true}
 
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
