--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -46,7 +46,7 @@ PPTXTP = 2
 #pdf转换图片清晰度
 pdfjpg = 100
 #启用PDF分页功能  (默认是关闭 )true  false
-pdffy = true
+pdffy = false
 #pdf限制显示多少页  参数(1-4)   0是全部 
 pdfpagee = 0
 #pdf大小进行分页 代表MB  (这里还没调试好)
