2022年1月1日，v4.4.2版本发布: 1、针对0KB的文件进行限制

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -64,7 +64,7 @@ spring.redisson.database = 0
 #缓存是否自动清理 true 为开启，注释掉或其他值都为关闭
 cache.clean.enabled = ${KK_CACHE_CLEAN_ENABLED:true}
 #缓存自动清理时间，cache.clean.enabled = true时才有用，cron表达式，基于Quartz cron
-cache.clean.cron = ${KK_CACHE_CLEAN_CRON:0 0 3 * * ?}
+cache.clean.cron = ${KK_CACHE_CLEAN_CRON:0 0 16 * * ?}
 
 #######################################可在运行时动态配置#######################################
 #提供预览服务的地址，默认从请求url读，如果使用nginx等反向代理，需要手动设置
@@ -110,7 +110,7 @@ ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 #水印内容
 #例：watermark.txt = ${WATERMARK_TXT:凯京科技内部文件，严禁外泄}
 #如需取消水印，内容设置为空即可，例：watermark.txt = ${WATERMARK_TXT:}
-watermark.txt = ${WATERMARK_TXT:}
+watermark.txt = ${WATERMARK_TXT:高雄测试版}
 #水印x轴间隔
 watermark.x.space = ${WATERMARK_X_SPACE:10}
 #水印y轴间隔
