2022年1月7日，v4.5版本发布: 1、重构压缩包目录样式 2、修复全局FILE协议错误问题 3、新增生成的图片压缩功能

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -27,13 +27,12 @@ office.plugin.task.timeout = 5m
 #文件资源路径（默认为打包根路径下的file目录下）
 #file.dir = D:\\kkFileview\\
 file.dir = ${KK_FILE_DIR:default}
-
+#压缩包目录
+file.ysb = yashuobao789
 #允许file协议预览的本地文件夹 默认不允许任何file协议
 local.preview.dir = true
-
 #是否运行访问首页  默认开启
 local.preview.index = true
-
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
 office.home = ${KK_OFFICE_HOME:default}
@@ -45,6 +44,8 @@ url.base64 = true
 PPTXTP = 2
 #pdf转换图片清晰度
 pdfjpg = 100
+#pdf转换图片压缩
+yashuo = false
 #启用PDF分页功能  (默认是关闭 )true  false
 pdffy = false
 #pdf限制显示多少页  参数(1-4)   0是全部 
