--- a/server/pom.xml
+++ b/server/pom.xml
@@ -108,12 +108,6 @@
 			<artifactId>xdocreport</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-        <!-- 解压(rar)-->
-        <dependency>
-           <groupId>com.github.junrar</groupId>
-           <artifactId>junrar</artifactId>
-           <version>7.4.0</version>
-       </dependency>
         <dependency>
             <groupId>net.sourceforge.jchardet</groupId>
             <artifactId>jchardet</artifactId>
@@ -185,6 +179,12 @@
           <groupId>org.apache.pdfbox</groupId>
           <artifactId>pdfbox-tools</artifactId>
           <version>2.0.24</version>
+        </dependency>
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.16</version>
         </dependency>
 		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
          <dependency>
