--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -102,9 +102,9 @@ pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:false}
 file.upload.disable = ${KK_FILE_UPLOAD_ENABLED:false}
 
 #预览源为FTP时 FTP用户名，可在ftp url后面加参数ftp.username=ftpuser指定，不指定默认用配置的
-ftp.username = ${KK_FTP_USERNAME:ftpuser}
+ftp.username = ${KK_FTP_USERNAME:666}
 #预览源为FTP时 FTP密码，可在ftp url后面加参数ftp.password=123456指定，不指定默认用配置的
-ftp.password = ${KK_FTP_PASSWORD:123456}
+ftp.password = ${KK_FTP_PASSWORD:88888}
 #预览源为FTP时, FTP连接默认ControlEncoding(根据FTP服务器操作系统选择，Linux一般为UTF-8，Windows一般为GBK)，可在ftp url后面加参数ftp.control.encoding=UTF-8指定，不指定默认用配置的
 ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 
