--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>cn.keking</groupId>
     <artifactId>filepreview</artifactId>
-    <version>${kk.file.view.version}</version>
+    <version>4.6</version>
     <packaging>pom</packaging>
 
     <name>kkFileView-parent</name>
@@ -19,7 +19,6 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <kk.file.view.version>4.6</kk.file.view.version>
         <spring.boot.version>2.4.2</spring.boot.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
