--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.keking</groupId>
         <artifactId>filepreview</artifactId>
-        <version>${kk.file.view.version}</version>
+        <version>4.6</version>
     </parent>
 
     <artifactId>kkFileView</artifactId>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>cn.keking</groupId>
             <artifactId>office-plugin</artifactId>
-            <version>${kk.file.view.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -228,7 +228,7 @@
             <artifactId>aspose-cad</artifactId>
             <version>21.10</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/aspose-cad-21.10.jar</systemPath>
+            <systemPath>${basedir}/lib/aspose-cad-21.11.jar</systemPath>
         </dependency>
 		 <!-- 邮件转换 -->
 		<dependency>
