2022年2月16日，v4.6.1版本发布: 7、更新xstream1.4.19 8、配置文件新增是否启用动态水印功能

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -108,7 +108,8 @@ ftp.password = ${KK_FTP_PASSWORD:88888}
 #预览源为FTP时, FTP连接默认ControlEncoding(根据FTP服务器操作系统选择，Linux一般为UTF-8，Windows一般为GBK)，可在ftp url后面加参数ftp.control.encoding=UTF-8指定，不指定默认用配置的
 ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 
-#水印内容
+#水印内容 是否启用动态水印
+watermark.qy = true
 #例：watermark.txt = ${WATERMARK_TXT:凯京科技内部文件，严禁外泄}
 #如需取消水印，内容设置为空即可，例：watermark.txt = ${WATERMARK_TXT:}
 watermark.txt = ${WATERMARK_TXT:高雄测试版}
