视频播放器更新为ckplayer新增,m3u8,ts 两款格式

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -82,7 +82,7 @@ cache.enabled = ${KK_CACHE_ENABLED:true}
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,xml,properties,md,gitignore,log,m,bas,prg}
 #多媒体类型，默认如下，可自定义添加
-media = ${KK_MEDIA:mp3,wav,mp4,flv}
+media = ${KK_MEDIA:mp3,wav,mp4,flv,m3u8,ts}
 #是否开启多媒体类型转视频格式转换,目前可转换视频格式有：avi,mov,wmv,3gp,rm
 #请谨慎开启此功能，建议异步调用添加到处理队列，并且增加任务队列处理线程，防止视频转换占用完线程资源，转换比较耗费时间,并且控制了只能串行处理转换任务
 media.convert.disable = ${KK_MEDIA_CONVERT_DISABLE:false}
@@ -109,7 +109,7 @@ ftp.password = ${KK_FTP_PASSWORD:88888}
 ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 
 #水印内容 是否启用动态水印
-watermark.qy = true
+watermark.qy = false
 #例：watermark.txt = ${WATERMARK_TXT:凯京科技内部文件，严禁外泄}
 #如需取消水印，内容设置为空即可，例：watermark.txt = ${WATERMARK_TXT:}
 watermark.txt = ${WATERMARK_TXT:高雄测试版}
