--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -81,6 +81,8 @@ cache.enabled = ${KK_CACHE_ENABLED:true}
 
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,xml,properties,md,gitignore,log,m,bas,prg}
+#视频广告
+gg.media = 知名广告:<br />万能转换器,请认准高雄修改版<br />网址:https://qt.cxcp.net
 #多媒体类型，默认如下，可自定义添加
 media = ${KK_MEDIA:mp3,wav,mp4,flv,m3u8,ts}
 #是否开启多媒体类型转视频格式转换,目前可转换视频格式有：avi,mov,wmv,3gp,rm
@@ -97,7 +99,7 @@ office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
 pdf.xianzhi = false
 
 #是否禁止下载转换生成的pdf文件
-pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:false}
+pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
 #是否禁用首页文件上传
 file.upload.disable = ${KK_FILE_UPLOAD_ENABLED:false}
 
@@ -135,4 +137,5 @@ watermark.angle = ${WATERMARK_ANGLE:10}
 #Tif类型图片浏览模式：tif（利用前端js插件浏览）；pdf（转换为pdf后显示，便于打印）
 tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 
-
+#OFD类型 PDF模式预览 pdf  svg  ofd
+OFD.preview.type = svg
