--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.keking</groupId>
         <artifactId>filepreview</artifactId>
-        <version>4.6.5</version>
+        <version>4.6.6</version>
     </parent>
 
     <artifactId>kkFileView</artifactId>
@@ -159,9 +159,13 @@
       <dependency>
     <groupId>org.ofdrw</groupId>
     <artifactId>ofdrw-converter</artifactId>
-    <version>1.17.10</version>
+    <version>1.17.12</version>
 </dependency>
-
+ <dependency>
+    <groupId>org.ofdrw</groupId>
+    <artifactId>ofdrw-core</artifactId>
+    <version>1.17.12</version>
+</dependency>
   
         <dependency>
             <groupId>commons-cli</groupId>
