1、添加备案信息

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -29,9 +29,9 @@ office.plugin.task.timeout = 5m
 file.dir = ${KK_FILE_DIR:default}
 #压缩包目录
 file.ysb = yashuobao789
-#允许file协议预览的本地文件夹 默认不允许任何file协议
+#允许file协议预览的本地文件夹 (true)不允许任何file协议 
 local.preview.dir = true
-#是否运行访问首页  默认开启
+#是否允许访问首页  默认开启
 local.preview.index = true
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
@@ -95,11 +95,11 @@ office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 #是否关闭office预览切换开关，默认为false，可配置为true关闭
 office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
 
-#限制右键 屏蔽F12 等功能 默认开启
+#限制右键 屏蔽F12 等功能 默认关闭(false)
 pdf.xianzhi = false
 
-#是否禁止下载转换生成的pdf文件
-pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
+#是否禁止下载转换生成的pdf文件  默认关闭(false)
+pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:false}
 #是否禁用首页文件上传
 file.upload.disable = ${KK_FILE_UPLOAD_ENABLED:false}
 
@@ -139,3 +139,6 @@ tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 
 #OFD类型 PDF模式预览 pdf  svg  ofd
 OFD.preview.type = svg
+
+#OFD类型 PDF模式预览 备案信息
+BeiAn = 
