1、添加备案信息

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -140,5 +140,5 @@ tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 #OFD类型 PDF模式预览 pdf  svg  ofd
 OFD.preview.type = svg
 
-#OFD类型 PDF模式预览 备案信息
+# 备案信息
 BeiAn = 
