--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>cn.keking</groupId>
     <artifactId>filepreview</artifactId>
-    <version>4.7.5</version>
+    <version>4.7.6</version>
     <packaging>pom</packaging>
 
     <name>kkFileView-parent</name>
@@ -20,6 +20,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.boot.version>2.7.1</spring.boot.version>
+         <log4j2.version>2.17.2</log4j2.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
