--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -47,7 +47,7 @@ pdfjpg = 100
 #pdf转换图片压缩
 yashuo = false
 #启用PDF分页功能  (默认是关闭 )true  false
-pdffy = true
+pdffy = false
 #pdf限制显示多少页  参数(1-4)   0是全部 
 pdfpagee = 1-4
 #pdf大小进行分页 代表MB  (这里还没调试好)
