OFD转换优化 OFD.JS解析插件优化图片处理/优化字体处理/修复只能预览10页的BUG

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>office-plugin</module>
         <module>server</module>
+         <module>ofdrw-converter</module>
     </modules>
 
     <properties>
