发布4.7.9.1版本发布: 1、修复base64和正常URL不自动识别问题

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -38,8 +38,6 @@ local.preview.index = true
 office.home = ${KK_OFFICE_HOME:default}
 #启用转换内核 openoffice 或 LibreOffice =1 启用转换内核 poi=2  
 office.officexh = 1
-#启用base64 
-url.base64 = true
 #POI转换PPT图片清晰度 只能是整数
 PPTXTP = 2
 #pdf转换图片清晰度
@@ -114,7 +112,7 @@ ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 watermark.qy = true
 #例：watermark.txt = ${WATERMARK_TXT:凯京科技内部文件，严禁外泄}
 #如需取消水印，内容设置为空即可，例：watermark.txt = ${WATERMARK_TXT:}
-watermark.txt = ${WATERMARK_TXT:高雄测试版}
+watermark.txt = ${WATERMARK_TXT:高雄修改版}
 #水印x轴间隔
 watermark.x.space = ${WATERMARK_X_SPACE:10}
 #水印y轴间隔
