--- a/ofdrw-converter/pom.xml
+++ b/ofdrw-converter/pom.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>ofdrw</artifactId>
         <groupId>org.ofdrw</groupId>
         <version>1.19.1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>ofdrw-converter</artifactId>
     <description>OFD转换为图片、SVG、PDF</description>
 
     <properties>
-        <pdfbox.version>2.0.26</pdfbox.version>
+        <pdfbox.version>2.0.27</pdfbox.version>
         <itext.version>7.1.17</itext.version>
     </properties>
 
